--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,15 @@ body
     font-size: 16px;
 }
 
+#cabecera
+{
+    background: #33a;
+    box-shadow: 0px 5px 30px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
 #container
 {
     width: 70%;
@@ -15,7 +24,16 @@ body
     margin: 0 auto;
 }
 
+#cabecera #tagline 
+{
+    font-weight: normal;
+}
 #container h1
 {
     font-size: 20px;
+}
+
+post 
+{
+    padding: 1em;
 }
