--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body 
 {
-    color: #333;
+    color: blue;
     text-align: left;
     font-family: arial;
     font-size: 16px;
@@ -26,7 +26,7 @@ body
 
 #cabecera #tagline 
 {
-    padding: 1em 0;
+    padding: 1em;
     font-weight: normal;
 }
 #container h1
